# openpixelcontrol

./: .gitignore  .hgignore  CMakeLists.txt  Makefile  README.md  debug.lldb  dummy_client.c  dummy_server.c  gl_server.c  opc.h  opc_client.c  opc_server.c  tcl_server.c  ws2801_server.c
Processing/capture2opc/: capture2opc.pde
Processing/libraries/img2opc/: README
Processing/libraries/img2opc/src/: Img2Opc.java
Processing/movie2opc/: movie2opc.pde
cmake/: FindGLUT.cmake
example_clients/: opc_client.py  raver_plaid.py
layouts/: circle_r1_50x.json  circle_r1_50x.l  cylinder_r1_h1_64x20.json  cylinder_r1_h1_64x20.l  cylinder_r1_h2_32x20.json  cylinder_r1_h2_32x20.l  cylinder_r2_h0.5_128x10.json  cylinder_r2_h0.5_128x10.l  forest_dj.json  freespace.json  freespace.py  make_cylinder.py  make_forest_dj.py  make_torus.py  make_wall.py  mush.json  tetris.json  tetris.py  wall.json  wall.l  wall.py
models/: .gitignore  Makefile  objfile.c  objfile.h  objtest.c  objview.c
models/soil/: README.md
python/: color_utils.py  conway.py  lava_lamp.py  miami.py  nyan_cat.py  opc.py  opc_udp.py  raver_plaid.py  raver_plaid_parse.py  raver_plaid_udp.py  rgb_test_pattern.py  spatial_stripes.py  speed_test.py
python_clients/: conway.py  demo.py  example.py  lava_lamp.py  miami.py  nyan_cat.py  opc.py  opc_client.py  pong.py  pong2.py  raver_plaid.py  raver_plaid_one_frame.py  sailor_moon.py  spatial_stripes.py  test.py
python_clients/opcmatrix/: __init__.py  opc.py
src/: apa102_server.c  cli.c  cli.h  compat.h  dummy_client.c  dummy_server.c  gl_server.c  lpd8806_server.c  opc.h  opc_client.c  opc_server.c  spi.c  spi.h  tcl_server.c  types.h  ws2801_server.c
web/: index.html  style.css
